# sudhanshu-nobroker

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
client/web/: package.json  pnpm-lock.yaml
client/web/src/: App.css  App.tsx  api.ts  index.css
client/web/src/components/: DisplayCarousel.tsx  LoginForm.tsx  RegisterPanel.tsx  SignUpForm.tsx
client/web/src/pages/: EditProperty.tsx  Home.tsx  OwnerDashboard.tsx  PostProperty.tsx  PropertyView.tsx  Sample.tsx
client/web/src/store/: authstore.ts  propertystore.ts  store.ts
product/: api_spec.md  architecture.md  spec.md
server/: .coverage  .env.example  .gitignore  auth_routes.py  database.py  main.py  model.py  path_setup.py  pyproject.toml  schema.py  security.py
server/api/: auth_routes.py  dependencies.py  property_routes.py  registereduser_routes.py  tenant_routes.py
server/core/: config.py  security.py
server/db/: database.py
server/models/: model.py
server/schemas/: schema.py
server/services/: auth_service.py  property_service.py  registereduser_service.py  tenant_service.py
server/tests/: conftest.py
server/tests/api/: test_auth_routes.py  test_dependencies.py  test_property_routes.py  test_registereduser_routes.py  test_tenant_routes.py
server/tests/core/: test_security.py
server/tests/model/: test_model.py  test_placeholder.py
server/tests/schema/: test_placeholder.py  test_schema.py
server/tests/service/: test_auth_service.py  test_property_service.py  test_registereduser_service.py  test_tenant_service.py
server/usecases/: __init__.py  auth_service.py
(+28 files in other folders)
